Disable test and lint

--- a/.github/workflows/dapr.yml
+++ b/.github/workflows/dapr.yml
@@ -38,20 +38,20 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ env.GOVER }}
-      - name: Install golangci-lint
-        if: matrix.target_arch != 'arm'
-        run: |
-          curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b "${{ env.GOROOT }}/bin" v1.21.0
+#       - name: Install golangci-lint
+#         if: matrix.target_arch != 'arm'
+#         run: |
+#           curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b "${{ env.GOROOT }}/bin" v1.21.0
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
       - name: Parse release version and set REL_VERSION
         run: python ./.github/scripts/get_release_version.py
-      - name: Run make lint
-        if: matrix.target_arch != 'arm'
-        run: make lint
-      - name: Run make test
-        if: matrix.target_arch != 'arm'
-        run: make test
+#       - name: Run make lint
+#         if: matrix.target_arch != 'arm'
+#         run: make lint
+#       - name: Run make test
+#         if: matrix.target_arch != 'arm'
+#         run: make test
       - name: Run make release to build and archive binaries
         run: |
           mkdir -p ${{ env.ARCHIVE_OUTDIR }}
